# revisitpy-server

./: LICENSE  README.md  pyproject.toml
.github/workflows/: new_version.yml
src/revisit_server/: run_server.py  server.py
src/revisit_server/static/: index.html
src/revisit_server/static/__revisit-widget/assets/: introduction.md
src/revisit_server/static/assets/: index-Eisx985f.js
src/revisitpy_server/: run_server.py
src/revisitpy_server/static/: index.html
src/revisitpy_server/static/__revisit-widget/: config.json
src/revisitpy_server/static/__revisit-widget/assets/: bar-chart-interaction.html
src/revisitpy_server/static/assets/: index-7WqFac6d.js  index-B28skwsh.js  index-BHuuuIjx.js  index-DAtzJ46g.js  index-DCi0hRuD.js  index-NpAIdLb5.js  index-lc6DRcQy.js  index-rbmMgdAu.js
tests/: old_server.py  test_module_one.py
