[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revisit_server"
version = "0.0.13"
dependencies = []
readme = "README.md"

[tool.hatch.build]
exclude = ["tests"]


[tool.hatch.metadata]
package-data = { "revisit_server" = ["static/**/*"] }
include = ["src/revisit_server/static/**/*"]
