[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "revisitpy_server"
version = "1.3.0"
dependencies = []
readme = "README.md"

[tool.hatch.build]
exclude = ["tests"]


[tool.hatch.metadata]
package-data = { "revisitpy_server" = ["static/**/*"] }
include = ["src/revisitpy_server/static/**/*"]
